--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', property: @property %>
 
-<%= link_to 'Show', @property %> |
-<%= link_to 'Back', properties_path %>
+<%= link_to '詳細', @property %> |
+<%= link_to '戻る', properties_path %>
