--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,29 +1,53 @@
 <p id="notice"><%= notice %></p>
 
+<h1>閲覧</h1>
+
 <p>
-  <strong>Property name:</strong>
+  <strong>物件名:</strong>
   <%= @property.property_name %>
 </p>
 
 <p>
-  <strong>Rent:</strong>
+  <strong>賃料:</strong>
   <%= @property.rent %>
 </p>
 
 <p>
-  <strong>Address:</strong>
+  <strong>住所:</strong>
   <%= @property.address %>
 </p>
 
 <p>
-  <strong>Age:</strong>
+  <strong>築年数:</strong>
   <%= @property.age %>
 </p>
 
 <p>
-  <strong>Remarks:</strong>
+  <strong>備考:</strong>
   <%= @property.remarks %>
 </p>
+
+<% @nearest_stations.each_with_index do |nearest_station, i|%>
+
+<p>
+  <strong>最寄駅<%= i + 1 %></strong>
+</p>
+
+<p>
+  <strong>路線名:</strong>
+  <%= nearest_station.route %>線
+</p>
+
+<p>
+  <strong>駅名:</strong>
+  <%= nearest_station.station %>駅
+</p>
+
+<p>
+  <strong>徒歩分数:</strong>
+  <%= nearest_station.minnutes_walk %>分
+</p>
+<% end %>
 
 <%= link_to 'Edit', edit_property_path(@property) %> |
 <%= link_to 'Back', properties_path %>
